# flask-graphql-starter

./: .env  .pre-commit-config.yaml  Dockerfile  README.MD  docker-compose.yml
src/: pyproject.toml
src/app_name/: alembic.ini  consts.py  graphql_schema.py  main.py  manage.py  model.py
src/app_name/alembic/: env.py
