[tool.poetry]
name = "app_name"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
SQLAlchemy = "^1.4.21"
alembic = "^1.6.5"
gunicorn = "^20.1.0"
graphene = "^2.1.9"
Flask-GraphQL = "^2.0.1"
graphene-sqlalchemy = "^2.3.0"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
